@@ -7,6 +7,8 @@ Changelog
 - Fixed a crash when writing HCOMPRESS compressed images that could happen on
   Python 2.5 and 2.6.
 
+- GZIP/ZIP-compressed FITS files can be detected and opened regardless of
+  their filename extension (#99)
 
 3.0.3 (2011-10-05)
 ------------------
